# dal

./: .dockerignore  .env.example  .env.test.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.md  docker-compose.test.yml  docker-compose.yml
.cognito/: config.json
.cognito/db/: clients.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-assign.yaml  ci.yaml  ci.yml  deploy-frontend.yaml
crates/dal-auth/: Cargo.toml
crates/dal-auth/src/: api_token.rs  cognito.rs  jwt.rs  lib.rs  token_scope.rs
crates/dal-common/: Cargo.toml
crates/dal-common/src/: error.rs  lib.rs  pagination.rs  response.rs  tracing_init.rs
crates/dal-db/: Cargo.toml
crates/dal-db/src/: lib.rs  models.rs
crates/dal-db/src/queries/: audit.rs  mod.rs  owner_invites.rs  packages.rs  tokens.rs  users.rs  versions.rs
crates/dal-index/: Cargo.toml
crates/dal-index/src/: lib.rs  resolver.rs
crates/dal-manifest/: Cargo.toml
crates/dal-manifest/src/: lib.rs  validate.rs
crates/dal-server/: Cargo.toml
crates/dal-server/src/: app.rs  config.rs  extractors.rs  lib.rs  main.rs  responses.rs  state.rs
crates/dal-server/src/middleware/: rate_limit.rs
crates/dal-server/src/routes/: admin.rs  auth.rs  health.rs  index.rs  mod.rs  owners.rs  packages.rs  search.rs  tokens.rs  users.rs  versions.rs
crates/dal-server/tests/: test_auth.rs  test_health.rs  test_owners.rs  test_packages.rs
crates/dal-server/tests/common/: mod.rs
crates/dal-storage/: Cargo.toml
crates/dal-storage/src/: archive.rs  lib.rs  s3.rs
crates/dal-worker/: Cargo.toml
crates/dal-worker/src/: email.rs  jobs.rs  main.rs  maintenance.rs  worker.rs
frontend/: .prettierignore  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  wrangler.toml
frontend/e2e/: live-smoke.mjs  release-smoke.spec.ts
frontend/functions/: _middleware.ts  tsconfig.json
frontend/src/: app.css  app.d.ts  app.html  hooks.server.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/lib/components/: Footer.svelte  Nav.svelte  PackageCard.svelte  Pagination.svelte
frontend/src/lib/stores/: auth.ts
frontend/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/auth/verify-email/: +page.server.ts
frontend/src/routes/dashboard/: +page.server.ts  +page.svelte
frontend/src/routes/forgot-password/: +page.svelte
frontend/src/routes/login/: +page.server.ts  +page.svelte
frontend/src/routes/register/: +page.svelte
frontend/src/routes/reset-password/: +page.svelte
frontend/src/routes/search/: +page.server.ts  +page.svelte
frontend/src/routes/settings/: +layout.server.ts  +layout.svelte  +page.svelte
frontend/src/routes/settings/tokens/: +page.server.ts  +page.svelte
frontend/src/routes/users/[username]/: +page.server.ts  +page.svelte
frontend/src/routes/verify-email/: +page.server.ts  +page.svelte
migrations/: 0001_create_users.sql  0002_create_verification_tokens.sql  0003_create_api_tokens.sql  0004_create_packages.sql  0005_create_package_owners.sql  0006_create_package_versions.sql  0007_create_download_logs.sql  0008_create_audit_log.sql  0009_add_api_token_scopes_and_owner_invites.sql
scripts/: localstack-init-test.sh  localstack-init.sh  test.bat  test.sh  validate-issue-templates.ps1
