[package]
name = "dal-auth"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
base64.workspace = true
dal-common.workspace = true
dal-db.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
jsonwebtoken = { version = "10", features = [] }
sha2.workspace = true
hex.workspace = true
rand.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
once_cell.workspace = true
aws-config.workspace = true
aws-sdk-cognitoidentityprovider.workspace = true
