[package]
name = "dal-index"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[dependencies]
dal-common.workspace = true
dal-manifest.workspace = true
dal-db.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
uuid.workspace = true
