[package]
name = "dal-server"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[lib]
name = "dal_server"
path = "src/lib.rs"

[[bin]]
name = "dal-server"
path = "src/main.rs"

[dependencies]
dal-common.workspace = true
dal-manifest.workspace = true
dal-db.workspace = true
dal-auth.workspace = true
dal-storage.workspace = true
dal-index.workspace = true

tower.workspace = true
bytes.workspace = true
governor.workspace = true
dashmap.workspace = true
once_cell.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
aws-config.workspace = true
aws-sdk-sqs.workspace = true
hex.workspace = true
sqlx.workspace = true
