[package]
name = "dal-worker"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true

[[bin]]
name = "dal-worker"
path = "src/main.rs"

[dependencies]
base64.workspace = true
dal-common.workspace = true
dal-db.workspace = true
dal-auth.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
reqwest.workspace = true
aws-config.workspace = true
aws-sdk-cognitoidentityprovider.workspace = true
aws-sdk-sqs.workspace = true
